Cherry-pick e05c6e3339f4. rdar://problem/112197978

"-webkit-box-decoration-break: clone" with left and right padding causes unexpected wrapping of inline content
    https://bugs.webkit.org/show_bug.cgi?id=259188
    <rdar://problem/112197978>

    Reviewed by Antti Koivisto.

    This bug is specific to shrink-to-fit content with "-webkit-box-decoration-break: clone" when
    the content is supposed to fit the current line.

    The fix is about accounting for the accumulated decoration end width when adjusting the available width for the continuous content.
    We already do that for content on the current line and this patch adjusts it for the current continuous content as well.

    * LayoutTests/fast/inline/shrink-to-fit-content-with-decoration-clone-expected.html: Added.
    * LayoutTests/fast/inline/shrink-to-fit-content-with-decoration-clone.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
    (WebCore::Layout::LineCandidate::InlineContent::setAccumulatedClonedDecorationEnd):
    (WebCore::Layout::LineCandidate::InlineContent::accumulatedClonedDecorationEnd const):
    (WebCore::Layout::LineCandidate::InlineContent::reset):
    (WebCore::Layout::LineBuilder::candidateContentForLine):
    (WebCore::Layout::availableWidth):

    Canonical link: https://commits.webkit.org/266051@main

Identifier: 265870.116@safari-7616-branch