Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp
@@ -215,6 +215,9 @@ struct LineCandidate {
 
         void setHangingContentWidth(InlineLayoutUnit logicalWidth) { m_continuousContent.setHangingContentWidth(logicalWidth); }
 
+        void setAccumulatedClonedDecorationEnd(InlineLayoutUnit accumulatedWidth) { m_accumulatedClonedDecorationEnd = accumulatedWidth; }
+        InlineLayoutUnit accumulatedClonedDecorationEnd() const { return m_accumulatedClonedDecorationEnd; }
+
     private:
         // FIXME: Enable this when we stop feature-matching legacy line layout.
         bool m_ignoreTrailingLetterSpacing { true };
@@ -222,6 +225,7 @@ struct LineCandidate {
         InlineContentBreaker::ContinuousContent m_continuousContent;
         const InlineItem* m_trailingLineBreak { nullptr };
         const InlineItem* m_trailingWordBreakOpportunity { nullptr };
+        InlineLayoutUnit m_accumulatedClonedDecorationEnd { 0.f };
         bool m_hasTrailingSoftWrapOpportunity { false };
     };
 
@@ -271,6 +275,7 @@ inline void LineCandidate::InlineContent::reset()
     m_continuousContent.reset();
     m_trailingLineBreak = { };
     m_trailingWordBreakOpportunity = { };
+    m_accumulatedClonedDecorationEnd = { };
 }
 
 inline void LineCandidate::reset()
@@ -696,6 +701,10 @@ void LineBuilder::candidateContentForLine(LineCandidate& lineCandidate, size_t c
 
     auto firstInlineTextItemIndex = std::optional<size_t> { };
     auto lastInlineTextItemIndex = std::optional<size_t> { };
+#if ENABLE(CSS_BOX_DECORATION_BREAK)
+    HashSet<const Box*> inlineBoxListWithClonedDecorationEnd;
+    auto accumulatedDecorationEndWidth = InlineLayoutUnit { 0.f };
+#endif
     for (auto index = currentInlineItemIndex; index < softWrapOpportunityIndex; ++index) {
         auto& inlineItem = m_inlineItems[index];
         auto& style = isFirstFormattedLine() ? inlineItem.firstLineStyle() : inlineItem.style();
@@ -718,6 +727,15 @@ void LineBuilder::candidateContentForLine(LineCandidate& lineCandidate, size_t c
         }
         if (inlineItem.isInlineBoxStart() || inlineItem.isInlineBoxEnd()) {
             auto logicalWidth = inlineItemWidth(inlineItem, currentLogicalRight);
+#if ENABLE(CSS_BOX_DECORATION_BREAK)
+            if (style.boxDecorationBreak() == BoxDecorationBreak::Clone) {
+                auto& layoutBox = inlineItem.layoutBox();
+                if (inlineItem.isInlineBoxStart())
+                    inlineBoxListWithClonedDecorationEnd.add(&layoutBox);
+                else if (inlineBoxListWithClonedDecorationEnd.contains(&layoutBox))
+                    accumulatedDecorationEndWidth += logicalWidth;
+            }
+#endif
             lineCandidate.inlineContent.appendInlineItem(inlineItem, style, logicalWidth);
             currentLogicalRight += logicalWidth;
             continue;
@@ -741,6 +759,7 @@ void LineBuilder::candidateContentForLine(LineCandidate& lineCandidate, size_t c
         }
         ASSERT_NOT_REACHED();
     }
+    lineCandidate.inlineContent.setAccumulatedClonedDecorationEnd(accumulatedDecorationEndWidth);
 
     auto setLeadingAndTrailingHangingPunctuation = [&] {
         auto hangingContentWidth = lineCandidate.inlineContent.continuousContent().hangingContentWidth();
@@ -893,10 +912,10 @@ static inline InlineLayoutUnit availableWidth(const LineCandidate::InlineContent
 #endif
     auto availableWidth = availableWidthForContent - line.contentLogicalRight();
     auto& inlineBoxListWithClonedDecorationEnd = line.inlineBoxListWithClonedDecorationEnd();
-    if (inlineBoxListWithClonedDecorationEnd.isEmpty())
-        return std::isnan(availableWidth) ? maxInlineLayoutUnit() : availableWidth;
     // We may try to commit a inline box end here which already takes up place implicitly through the cloned decoration.
     // Let's not account for its logical width twice.
+    if (inlineBoxListWithClonedDecorationEnd.isEmpty())
+        return std::isnan(availableWidth) ? maxInlineLayoutUnit() : (availableWidth + candidateContent.accumulatedClonedDecorationEnd());
     for (auto& run : candidateContent.continuousContent().runs()) {
         if (!run.inlineItem.isInlineBoxEnd())
             continue;
@@ -905,7 +924,7 @@ static inline InlineLayoutUnit availableWidth(const LineCandidate::InlineContent
             continue;
         availableWidth += decorationEntry->value;
     }
-    return std::isnan(availableWidth) ? maxInlineLayoutUnit() : availableWidth;
+    return std::isnan(availableWidth) ? maxInlineLayoutUnit() : (availableWidth + candidateContent.accumulatedClonedDecorationEnd());
 }
 
 static std::optional<InlineLayoutUnit> eligibleOverflowWidthAsLeading(const InlineContentBreaker::ContinuousContent::RunList& candidateRuns, const InlineContentBreaker::Result& lineBreakingResult, bool isFirstFormattedLine)
